Fix spacing issues due to new design

--- a/_sass/_devHQ.sass
+++ b/_sass/_devHQ.sass
@@ -43,6 +43,7 @@ $bracket_yellow: #F9D164
   position: relative
   width: 100%
   overflow: hidden
+  padding-bottom: 0
 
 .devhq_container
   @extend %container
