--- a/_sass/_wistia_basics.sass
+++ b/_sass/_wistia_basics.sass
@@ -46,7 +46,6 @@
       background-color: white
       font-family: $title-fonts
       height: 415px
-      margin: 0 30px
       vertical-align: top
       width: 425px
       +box-shadow(rgba(0,0,0,.05), 0, 0, 10px)
